Fixes some alignment issues around the comments section of ArticlePage component.

--- a/src/components/CommentForm.css
+++ b/src/components/CommentForm.css
@@ -1,3 +1,15 @@
+form {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
 textarea {
   resize: none;
+  margin: 2px;
+}
+
+form button {
+  margin: 2px;
 }
